Fix issues varios